--- a/react-ui/src/app.css
+++ b/react-ui/src/app.css
@@ -1,7 +1,7 @@
 body {
   font-family: "sans-serif";
-  background-color: #FFF;
-  color: #000;
+  background-color: #000;
+  color: #ffffff;
   margin: 0;
 }
 
@@ -12,7 +12,7 @@ h2, h3, p {
 
 .title {
   margin: 0 2rem;
-  color: #000;
+  color: #FFF;
   text-align: center;
 }
 
@@ -38,17 +38,17 @@ h1 {
 }
 
 .demo-text {
-  color:#000;
+  color:#444;
 }
 
 .app {
   text-align: center;
   /*background-color:#07b;*/
-  background-color:#FFF;
+  background-color:#000;
   transition: background 2s ease-in-out;
 }
 .app-with-image{
-  background-color: #FFF;
+  background-color: #000;
 }
 
 .app .initial-dropzone {
@@ -130,13 +130,13 @@ h1 {
   margin-top:1rem;
   text-align: center;
   width:100%;
-  background-color: #FFF;
-  color: #000
+  background-color: #000;
+  color: #ffffff
 }
 
 .footer a {
   display:inline-block;
   margin:1rem;
-  background-color: #FFF;
+  background-color: #000;
   color:#777;
 }
