--- a/react-ui/src/spinner.css
+++ b/react-ui/src/spinner.css
@@ -2,7 +2,7 @@
 
 }
 .spinner-text{
-  color:#fff;
+  color:#000;
 }
 
 .spinner {
@@ -14,7 +14,7 @@
 }
 
 .spinner > div {
-  background-color: #fff;    
+  background-color: #000;    
   margin: 0 3px 0 0;
   height: 100%;
   width: 6px;
